--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3217,8 +3217,8 @@ input, select, textarea {
 
 	#particles-js {
     position: fixed;
-    width: 100vw;  /* Full viewport width */
-    height: 100vh; /* Full viewport height */
+    width: 100%;  /* Full viewport width */
+    height: 100%; /* Full viewport height */
     top: 0;
     left: 0;
     z-index: -1; /* Send it to the background */
