--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -298,7 +298,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #ff0000 !important;
+			color:  #28693C !important;
 		}
 
 	strong, b {
@@ -2215,9 +2215,10 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #ff0000;
-			transform: scale(1.5);
-			color: #000000 !important;
+			box-shadow: inset 0 0 0 2px #144033;
+			transform: scale(1.2);
+			background-color: #144033;
+			color: #e8b923 !important;
 		}
 
 		input[type="submit"].primary,
@@ -2235,7 +2236,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #ff67ed;
+				background-color:  #BB6830;
 				color:#ffffff;
 			}
 
@@ -2887,7 +2888,7 @@ input, select, textarea {
 	}
 
 	ul.icons li a.icon:hover:before {
-		color: #ff0000;
+		color: #002147;
 	}
 
 	ul.icons.alt li .icon:before {
@@ -3201,7 +3202,7 @@ input, select, textarea {
 
 			.pagination a:hover + a,
 			.pagination a:hover + span {
-				border-left-color: #ff0000;
+				border-left-color: #bd0021;
 			}
 
 		.pagination a.active {
@@ -3321,7 +3322,7 @@ input, select, textarea {
 
 			#intro a:hover {
 				border-bottom-color: transparent;
-				color: #ff0000 !important;
+				color: #144033 !important;
 			}
 
 		#intro strong, #intro b {
@@ -3360,8 +3361,9 @@ input, select, textarea {
 			#intro input[type="button"]:hover,
 			#intro button:hover,
 			#intro .button:hover {
-				box-shadow: inset 0 0 0 2px #18bfef;
-				color: #18bfef !important;
+				box-shadow: inset 0 0 0 2px #d2b48c;
+				background-color: #d2b48c;
+				color: #144033 !important;
 			}
 
 			#intro input[type="submit"].primary,
@@ -3530,7 +3532,7 @@ input, select, textarea {
 
 			#header a:hover {
 				border-bottom-color: transparent;
-				color: #ff0000 !important;
+				color: #390517 !important;
 			}
 
 		#header strong, #header b {
@@ -3574,8 +3576,8 @@ input, select, textarea {
 		}
 
 			#header .logo:hover {
-				border-color: #ff0000 !important;
-				color: #ff0000 !important;
+				border-color: #bd0021 !important;
+				color: #bd0021 !important;
 			}
 
 		@media screen and (max-width: 980px) {
@@ -3629,7 +3631,7 @@ input, select, textarea {
 		}
 
 		#nav ul.icons li a.icon:hover:before {
-			color: #ff0000;
+			color: #bd0021;
 		}
 
 		#nav ul.icons.alt li .icon:before {
@@ -3637,7 +3639,7 @@ input, select, textarea {
 		}
 
 		#nav ul.icons.alt li a.icon:hover:before {
-			box-shadow: inset 0 0 0 2px #ff0000;
+			box-shadow: inset 0 0 0 2px #bd0021;
 		}
 
 		#nav input, #nav select, #nav textarea {
@@ -3727,7 +3729,7 @@ input, select, textarea {
 					}
 
 						#nav ul.links li.active a:hover {
-							color: #ff0000 !important;
+							color: #bd0021 !important;
 						}
 
 		#nav ul.icons {
@@ -4015,8 +4017,8 @@ input, select, textarea {
 			#footer input[type="button"]:hover,
 			#footer button:hover,
 			#footer .button:hover {
-				box-shadow: inset 0 0 0 2px #ef1818;
-				color: #ff0000 !important;
+				box-shadow: inset 0 0 0 2px #BB6830;
+				color:  #BB6830 !important;
 			}
 
 			#footer input[type="submit"].primary,
@@ -4034,7 +4036,7 @@ input, select, textarea {
 				#footer input[type="button"].primary:hover,
 				#footer button.primary:hover,
 				#footer .button.primary:hover {
-					background-color: #f40000;
+					background-color: #BB6830;
 				}
 
 		#footer label {
@@ -4117,7 +4119,7 @@ input, select, textarea {
 		}
 
 		#footer ul.icons li a.icon:hover:before {
-			color: #ff0000;
+			color: #bd0021;
 		}
 
 		#footer ul.icons.alt li .icon:before {
@@ -4125,7 +4127,7 @@ input, select, textarea {
 		}
 
 		#footer ul.icons.alt li a.icon:hover:before {
-			box-shadow: inset 0 0 0 2px #ff0000;
+			box-shadow: inset 0 0 0 2px #bd0021;
 		}
 
 		#footer header.major .date:before, #footer header.major .date:after {
